Bug 1136696 - If size of folder is 0, show empty cell in Seamonkey's RDFized folder pane again. Regression from bug 789679. r=Neil a=Ratty CLOSED TREE